Add all html and css

--- a/index.html
+++ b/index.html
@@ -16,23 +16,24 @@
             </div>    
         </div>
         <div class="doodle">
-            <img src="/img/google.png" alt="Doodle">
-            <img id="share" src="/img/share.png" alt="Share">
+            <a href="https://www.google.com/search?sxsrf=ACYBGNRYvllVLfii0qwPOdzj-lHgADz_JA:1577282432262&q=%D0%92%D1%96%D1%82%D0%B0%D1%94%D0%BC%D0%BE+%D0%B7%D1%96+%D1%81%D0%B2%D1%8F%D1%82%D0%B0%D0%BC%D0%B8+%D1%83+2019+%D1%80%D0%BE%D1%86%D1%96!&oi=ddle&ct=141329561&hl=uk&sa=X&ved=0ahUKEwjIn9X4-tDmAhUJuIsKHSXsC9kQPQgL"><img src="/img/google.png" alt="Doodle"></a>
+            <a href="https://www.google.com/#"><img id="share" src="/img/share.png" alt="Share"></a>
         </div>   
         <div class="form">
 
             <form action="/search.php" method="get">
-                <textarea name="search"  id="search" cols="44" rows="1"></textarea> </br>
+                <input name="search"  id="search" cols="88" rows="1"></textarea> </br>
                 <p><button type="submit">Пошук Google</button>  <button type="button" >Мені пощастить</button></p>
             </form>
         </div>
         <div class="lang_sel">
-            <p>Мова Google: <a href="">Українська</a></p>
+            <p>Мова Google: <a href="https://www.google.com/setprefs?sig=0_iF9g-xFQuqPLafwG_oV1_es_dz4%3D&hl=uk&source=homepage&sa=X&ved=0ahUKEwiwnPDVrc7mAhUklosKHQTPCKcQ2ZgBCA4">Українська</a></p>
         </div>
         <p id="lang">Україна</p>
         <p>
             <span id="p1"><a href="">Реклама</a> <a href="">Business</a> <a href="">Про Google</a> <a href="">Як працює Пошук</a></span> 
             <span id="p2"><a href="">Конфіденційність</a> <a href="">Умови</a> <a href="">Налаштування</a></span> 
         </p>
+        
     </body>
 </html>
